--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "node src/app.js",
-    "prettier": "npx prettier . --write"
+    "prettier": "npx prettier . --write",
+    "test": "jest --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,14 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "prettier": "3.2.5"
+    "jest": "^29.7.0",
+    "prettier": "3.2.5",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
