--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
+    "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
@@ -32,6 +33,7 @@
   },
   "homepage": "https://github.com/Danilontn53/nodejs-backend-challenge#readme",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
