--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
   "homepage": "https://github.com/Danilontn53/nodejs-backend-challenge#readme",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
-    "joi": "^17.13.1"
+    "joi": "^17.13.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
