--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
     "@types/node": "^20.12.11",
+    "@types/passport-jwt": "^4.0.1",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -35,12 +36,20 @@
   "homepage": "https://github.com/Danilontn53/nodejs-backend-challenge#readme",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
