feat: :zap: adiciona controle jwt

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=3000
 DATABASE_URL="postgresql://postgress:postgress@postgres_challenge:5432/challenge?schema=public"
+SALT_ROUNDS_CRYPT=10
+JWT_SECRET=578369aa53d3cc8cd5a0c3808475d364f276fe52
