Teste de separação de rotas ok

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-backend-challenge",
   "version": "1.0.0",
   "description": "The project is a simple challenge to test your skills in building APIs using the Node.js framework.",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./src/app.mjs",
